# VocaByte

./: .gitignore  .gitmodules  LICENSE  README.md  pubspec.yaml
android/: build.gradle  gradle.properties  key.properties
android/app/: build.gradle
android/app/src/androidTest/java/com/tuna/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/data/: ca.pkey
android/app/src/main/java/com/vocabyte/: MainActivity.kt
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/res/drawable/: ic_logo.xml  ic_logo_on.xml  ic_logo_splash.xml  logo_off_small.xml  logo_on_small.xml
android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml  themes.xml
android/app/src/test/java/com/tuna/: ExampleUnitTest.kt
cpp/: .gitignore  CMakeLists.txt  api_lib.cpp  api_lib.h
cpp/db/: misc_db.cpp  misc_db.h
cpp/protobuf/: proto.pb.cc  proto.pb.h
cpp/utils/: converter.h
ios/: Podfile  proto.pb.swift
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/Runner.xcodeproj/xcshareddata/xcschemes/: vpn_net.xcscheme
ios/Runner.xcodeproj/xcuserdata/khomin.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Runner.xcodeproj/xcuserdata/khominvladimir.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Runner.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/Runner.xcworkspace/xcuserdata/khomin.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Runner.xcworkspace/xcuserdata/khomin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios/Runner.xcworkspace/xcuserdata/khominvladimir.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Runner.xcworkspace/xcuserdata/khominvladimir.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
ios/protobuf/: proto.pb.swift
ios/vpn_net/: Extension-Bridge-Header.h  Info.plist  PacketTunnelProvider.swift  api_os.h  api_os.mm  vpn_net.entitlements
lib/: main.dart
lib/app/: app.dart  app_theme.dart  const_values.dart  file_utils.dart  log_printer.dart  ui_helper.dart  utils.dart
lib/components/: button2.dart  button2_animated.dart  button3.dart  button4.dart  button_fixed_down.dart  button_round_corner.dart  button_with_menu.dart  circle_button.dart  container_click.dart  custom_checkbox.dart  dev_panel.dart  hover_button.dart  hover_click_component.dart  navigation_observer.dart  progress_border_button.dart  progress_box.dart  two_buttons.dart
lib/components/dialogs/: change_review_time.dart  confirm_dialog.dart  dialog_header.dart  error_dialog.dart
lib/domains/: app_route.dart
lib/domains/card_review/: card_item.dart  card_page.dart  card_review_nav.dart  cards_done.dart
lib/domains/drawer/: drawer_item.dart  drawer_menu.dart
lib/domains/entry/: page_1.dart  page_entry.dart
lib/domains/manage_word/: manage_word_item.dart  manage_word_model.dart  manage_word_page.dart
lib/domains/models/: app_model.dart  search_word_model.dart  word_data.dart
lib/domains/numerals/: numeral_item.dart  numerals_done.dart  numerals_nav.dart  numerals_page.dart
lib/domains/page_about/: page_about.dart
lib/domains/page_home/: page_home.dart
lib/domains/page_search_word/: page_search.dart  word_item.dart
lib/domains/settings/: settings_daily_goal.dart  settings_page.dart
lib/domains/word_details/: page_word_details.dart
lib/repository/: app_rep.dart  review_task.dart  review_task_base.dart  review_task_mock.dart  settings_rep.dart
lib/services/: service_api.dart  tts.dart
lib/services/protobuf/: app.pb.dart  app.pbenum.dart  app.pbjson.dart  message.pb.dart  message.pbenum.dart  message.pbjson.dart  netlib.pb.dart  netlib.pbenum.dart  netlib.pbjson.dart  netlib.pbserver.dart  proto.pb.dart  proto.pbenum.dart  proto.pbjson.dart  proto.pbserver.dart  registration.pb.dart  registration.pbenum.dart  registration.pbjson.dart  registration.pbserver.dart
lib/test_parts/: convert_epub_txt.dart
linux/: CMakeLists.txt  my_application.cc
linux/deb-package/: .gitignore  README.md
linux/deb-package/TunVPN/DEBIAN/: control  postinst  postrm  preinst
linux/deb-package/TunVPN/usr/share/applications/: TunVPN.desktop
linux/deb-package/TunVPN/usr/share/icons/TunaVPN/: TunaVPN.xpm
protobuf/: proto.proto
scripts/make_dictionary/: create_db.py  database.sqbpro  db.py  main.py  requirements.txt  source_storage.py
